--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
     </div>
 
     <footer>
-      <div>Tip: Use keyboard (digits, + - * / Enter Backspace)</div>
-      <div>Made with ❤️</div>
+      <div>Developed By Bhargav Gol</div>
     </footer>
   </div>
 
